tdf#111782: fix Wrong rendering of image radiobutton on Split Cells dialog

The radio button icon was too big and there weren't enough space to render the
bottom border, so I reduced the size of the radio button icon.

Change-Id: Ie93f21ca730329716d0d209726e4d41c5d235b88